--- a/atelier/package.json
+++ b/atelier/package.json
@@ -7,14 +7,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.2",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "npm-watch": "^0.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "4.6.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "react-icons": "4.6.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
