--- a/atelier/package.json
+++ b/atelier/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.2",
+    "cloudinary-core": "^2.13.0",
+    "cloudinary-react": "^1.8.1",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
