--- a/atelier/package.json
+++ b/atelier/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
+    "jest-mock-axios": "4.7.0-beta",
     "axios": "^1.1.2",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
+    "jest-mock-axios": "^4.7.0-beta",
     "nodemon": "^2.0.20",
     "react-test-renderer": "^18.2.0"
   }
