--- a/atelier/package.json
+++ b/atelier/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.2",
     "cloudinary-core": "^2.13.0",
@@ -20,6 +19,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -54,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "nodemon": "^2.0.20",
     "react-test-renderer": "^18.2.0"
