--- a/atelier/package.json
+++ b/atelier/package.json
@@ -55,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "jest-mock-axios": "^4.7.0-beta",
     "nodemon": "^2.0.20",
